<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/create_note_toolbar"
        android:icon="@drawable/ic_add"
        android:title="@string/toolbar_new_note"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/delete_note_toolbar"
        android:icon="@drawable/ic_delete"
        android:title="@string/toolbar_delete_note"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/recycle_grid"
        android:icon="@drawable/ic_grid"
        android:title="@string/recycle_grid"
        app:showAsAction="withText"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/recycle_list"
        android:icon="@drawable/ic_list"
        android:title="@string/resucle_list"
        app:showAsAction="withText"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/back_note_toolbar"
        android:icon="@drawable/ic_back"
        android:title="@string/back"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
</menu>