<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <EditText
        android:id="@+id/note_tittle_frag2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/note_name"
        android:inputType="textCapSentences"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/note_description_frag2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="serif-monospace"
        android:hint="@string/note_description"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        android:textStyle="bold" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="serif-monospace"
        android:text="@string/save"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

</LinearLayout>